# pathtracer-rs

./: Cargo.toml  README.md
examples/: triangle.mtl
src/: camera.rs  color.rs  hit.rs  image_writer.rs  lib.rs  material.rs  matrix.rs  ray.rs  render.rs  scene.rs  vector.rs
src/camera/: mod.rs  perspective.rs
src/material/: diffuse.rs  mod.rs  specular.rs
src/random/: mod.rs  thread.rs
src/scene/: aabb.rs  intersection.rs  mod.rs  tree.rs  triangle.rs
