[package]
name = "pathtracer_rs"
version = "0.1.0"
authors = ["Ryan N Johnson <ryan@ryannjohnson.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-channel = "0.4.2"
crossbeam-utils = "0.7.2"
image = "0.23.0"
num_cpus = "1.12.0"
rand = "0.7.3"
wavefront_obj = "7.0.0"
